<resources>
    <string name="app_name">GiftApp</string>
    <string name="add_gifts_activity">Add Gifts</string>
    <string name="view_gifts_activity">View Gifts</string>
    <string name="purchased_gifts_activity">Purchased Gifts</string>
    <string name="gift_price">Gift price :</string>
    <string name="gift_notes">Gift notes :</string>
    <string name="for_whom">For Whom :</string>
    <string name="gift_name">Gift name :</string>
    <string name="add_gift">Add Gift</string>
    <string name="view_gifts_text">List of Gifts:</string>
    <string name="list_of_gifts">List of Gifts</string>
    <string name="delete_all">Delete All</string>
    <string name="purchased_gifts">Purchased Gifts</string>
    <string name="gift">Gift</string>
    <string name="string_gift" />
    <string name="from_me">From: Me</string>
    <string name="purchase">Purchase</string>
    <string name="motd">MOTD</string>
    <string name="already_purchased">Already Purchased?</string>
    <string name="from_whom">From Whom :</string>
    <string name="address">Address:</string>
</resources>